# coreplay-poc

./: Cargo.toml  README.md
executor/: Cargo.toml
executor/src/: main.rs
messaging/: Cargo.toml
messaging/src/: lib.rs
task/: Cargo.toml
task/src/: lib.rs
