[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "executor"

[dependencies]
anyhow = "1.0.75"
futures-timer = "3.0.2"
wasmtime = { version = "12.0.0", features = [ "async" ] }
messaging = { path = "../messaging" }
codec = { package = "parity-scale-codec", version = "3.6.4", features = [ "derive" ] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = [ "full" ] }
